# Stock-prediction-using-transformers

./: .gitignore  README.md  pyproject.toml
Data/nasdaq_test/: AAON.csv  ACUR.csv  ADES.csv  AFCB.csv  AHGP.csv  AMBA.csv  AMSC.csv  ANAC.csv  ANTH.csv  APOG.csv  ARAY.csv  ARLP.csv  ATEC.csv  ATLO.csv  ATSG.csv  BANR.csv  BDSI.csv  BIOC.csv  BMRC.csv  BOKF.csv  BPOP.csv  BRFH.csv  BRKR.csv  BSET.csv  CAC.csv  CBAN.csv  CDXS.csv  CFRX.csv  CGO.csv  CLVS.csv  CMLS.csv  CNTY.csv  COHU.csv  COLB.csv  CRMT.csv  CRTO.csv  CSTE.csv  CTRN.csv  CYBR.csv  CYRN.csv  (+117 more)
Data/nasdaq_train/: AAL.csv  AAME.csv  AAOI.csv  AAPL.csv  AAVL.csv  AAWW.csv  ABCB.csv  ABCD.csv  ABCO.csv  ABIO.csv  ABMD.csv  ACAD.csv  ACET.csv  ACFC.csv  ACFN.csv  ACGL.csv  ACHC.csv  ACHN.csv  ACLS.csv  ACNB.csv  ACOR.csv  ACRX.csv  ACST.csv  ACTG.csv  ADBE.csv  ADI.csv  ADMP.csv  ADP.csv  ADSK.csv  ADTN.csv  ADUS.csv  ADXS.csv  AEHR.csv  AEIS.csv  AELTF.csv  AERI.csv  AEY.csv  AEZS.csv  AFAM.csv  AFMD.csv  (+1203 more)
Data/nasdaq_val/: ACIW.csv  ACTA.csv  ADMA.csv  AGEN.csv  ALSD.csv  ANCX.csv  APTO.csv  ARTNA.csv  ASML.csv  ASUR.csv  AVID.csv  BANX.csv  BBOX.csv  BCRX.csv  BEAT.csv  BGCP.csv  BIND.csv  BLDP.csv  BNFT.csv  BOSC.csv  BSQR.csv  CAMP.csv  CASI.csv  CCBG.csv  CERS.csv  CFFI.csv  CGEN.csv  CHEF.csv  CHSYF.csv  CNCE.csv  CNMD.csv  COHR.csv  CPHC.csv  CPRT.csv  CRAI.csv  CSII.csv  CSWC.csv  CVGI.csv  CWBC.csv  CYAN.csv  (+116 more)
src/trading/: utils.py
src/trading/data/: lightning_data_module.py
src/trading/datasets/: datasets.py  multidifference_date_binary_class_dataset.py  multivalue_date_binary_class_dataset.py
(+22 files in other folders)
