[tool.poetry]
name = "trading"
version = "0.1.0"
description = ""
authors = ["Daedalus <daedalus314@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.4.8"
jupyterlab-lsp = "^3.10.2"
scikit-learn = "^1.1.2"
pandas = "^1.5.0"
seaborn = "^0.12.0"
requests = "^2.28.1"
tqdm = "^4.64.1"
statsmodels = "^0.13.2"
torch = "^1.12.1"
tensorboard = "^2.10.1"
lazypredict = "^0.2.12"
hydra-core = "^1.3.1"
pytorch-lightning = "^1.8.6"
pytest = "^7.2.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
